--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1>Youtube Video Downloader</h1>
       <!-- step 1 -->
-      <div class="step-1">
+      <div id="step-1" class="step-1">
         <input
           id="url"
           type="text"
@@ -33,8 +33,41 @@
           </svg>
         </button>
        </input>
+
      </div>
      <div id="error-message" class="error-message"></div>
+      <!-- step 2 -->
+      <div id="step-2" class="step-2">
+        <div class="video-card">
+        <div class="img-box">
+          <img id="thumbnail" src="" alt="thumbnail" />
+        </div>
+        <div class="video-details">
+          <h2>Video Details</h2>
+          <div class="video-info
+          ">
+            <p class="video-card-header">Video Id:</p>
+            <p id="videoId"></p>
+          </div>
+          <div class="video-info">
+            <p class="video-card-header">Title:</p>
+            <p id="title"></p>
+          </div>
+          <div class="video-info">
+            <p class="video-card-header">Description:</p>
+            <p id="description"></p>
+          </div>
+          <div class="video-info">
+            <p class="video-card-header">Category:</p>
+            <p id="category"></p>
+          </div>
+          <div class="video-info">
+            <p class="video-card-header">Duration:</p>
+            <p id="lengthSeconds"></p>
+          </div>
+          <button type="button" id="download-button">Download</button>
+        </div>
+    </div>
     </div>
     <script type="module" src="app.js"></script>
   </body>
