Loading screen created.

--- a/client/index.html
+++ b/client/index.html
@@ -36,6 +36,9 @@
 
      </div>
      <div id="error-message" class="error-message"></div>
+     <div class="loader-box">
+     <div id="loader" class="loader"></div>
+    </div>
       <!-- step 2 -->
       <div id="step-2" class="step-2">
         <div class="video-card">
