Upgrade: @distube/ytdl-core package & Refactor: minor ui changes

--- a/client/index.html
+++ b/client/index.html
@@ -32,7 +32,6 @@
             />
           </svg>
         </button>
-       </input>
 
      </div>
      <div id="error-message" class="error-message"></div>
@@ -78,6 +77,12 @@
         <p id="file-path"></p>
         </div>  
       </div>
+    </div>
+    <div class="footer">  
+      <p>
+        Developed by <a href="https://github.com/ucemrecan">Umut Cemre Can</a>
+      </p>
+    </div>
     <script type="module" src="app.js"></script>
   </body>
 </html>
